--- a/StandByMode/Resources/Info.plist
+++ b/StandByMode/Resources/Info.plist
@@ -2,5 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>flipclockblack.ttf</string>
+		<string>octopuss.ttf</string>
+	</array>
 </dict>
 </plist>
